--- a/default.config.yml
+++ b/default.config.yml
@@ -3,16 +3,15 @@ downloads: ~/.ansible-downloads/
 
 configure_sudoers: yes
 
-dotfiles_repo: https://github.com/geerlingguy/dotfiles.git
+dotfiles_repo: https://github.com/NickBlomberg/dotfiles.git
 dotfiles_repo_accept_hostkey: yes
-dotfiles_repo_local_destination: ~/Dropbox/Development/GitHub/dotfiles
+dotfiles_repo_local_destination: ~/.dotfiles
 dotfiles_files:
-  - .bash_profile
   - .gitconfig
   - .gitignore
-  - .inputrc
-  - .osx
+  - .macos
   - .vimrc
+  - .zshrc
 
 homebrew_installed_packages:
   - cookiecutter
