--- a/main.yml
+++ b/main.yml
@@ -3,12 +3,7 @@
   connection: local
 
   vars_files:
-    - default.config.yml
-
-  pre_tasks:
-    - include_vars: "{{ item }}"
-      with_fileglob:
-        - ../config.yml
+    - config.yml
 
   roles:
     - geerlingguy.homebrew
