--- a/main.yml
+++ b/main.yml
@@ -13,7 +13,7 @@
     - include: tasks/ansible-setup.yml
     - include: tasks/preferences.yml
 
-    # TODO: Use sudo once .osx can be run via root with no user interaction.
-    - name: Run .osx dotfiles.
-      shell: ~/.osx --no-restart
+    # TODO: Use sudo once .macos can be run via root with no user interaction.
+    - name: Run .macos dotfile
+      shell: ~/.macos --no-restart
       changed_when: false
