--- a/main.yml
+++ b/main.yml
@@ -13,7 +13,7 @@
     - include: tasks/ansible-setup.yml
     - include: tasks/preferences.yml
 
-    # TODO: Use sudo once .macos can be run via root with no user interaction.
     - name: Run .macos dotfile
-      shell: bash ~/.macos --no-restart
+      shell: bash /Users/vagrant/.macos --no-restart
       changed_when: false
+      become: yes
