--- a/tasks/preferences.yml
+++ b/tasks/preferences.yml
@@ -3,8 +3,8 @@
 - name: "Clone repo from github to home folder"
   git:
     repo: https://github.com/robbyrussell/oh-my-zsh.git
-    dest: ~/.oh-my-zsh
+    dest: "{{ user_home }}.oh-my-zsh"
 
 - name: "Change the user's default shell to Zsh"
-  user: name=vagrant shell=/bin/zsh
+  user: name={{ user }} shell=/bin/zsh
   become: yes
